modified:   home/lucas/.config/conky/conky.conf 	modified:   home/lucas/.config/i3/config 	modified:   home/lucas/.config/i3/cores.conf 	modified:   home/lucas/.config/i3blocks/config 	modified:   home/lucas/.config/i3blocks/scripts/focus 	modified:   home/lucas/.config/i3blocks/scripts/hora 	modified:   home/lucas/.config/i3blocks/scripts/mpd 	modified:   home/lucas/.config/i3blocks/scripts/packages 	modified:   home/lucas/.config/i3blocks/scripts/temperature 	modified:   home/lucas/.config/i3blocks/scripts/trash 	modified:   home/lucas/.config/i3blocks/scripts/uptime 	modified:   home/lucas/.config/i3blocks/scripts/volume 	modified:   home/lucas/.config/i3blocks/scripts/weather 	modified:   home/lucas/.config/rofi/scripts/configs 	new file:   home/lucas/.config/rofi/scripts/git 	modified:   home/lucas/.tmux.conf 	new file:   home/lucas/bin/colortest.sh 	new file:   home/lucas/bin/nodisplay.sh 	new file:   home/lucas/bin/spacey.sh

--- a/home/lucas/.config/conky/conky.conf
+++ b/home/lucas/.config/conky/conky.conf
@@ -45,7 +45,7 @@ conky.config = {
     gap_y = 0,
     net_avg_samples = 2,
     no_buffers = true,
-    double_buffers = true,
+    double_buffer = true,
     out_to_console = false,
     out_to_stderr = false,
     extra_newline = false,
@@ -75,10 +75,10 @@ conky.config = {
 }
 
 conky.text = [[
-${alignc} \
-${color3}cpu ${cpubar 4} \
-${color4}ram ${membar 4} \
-${color5}swap ${swapbar 4} \
-${color6}/ ${fs_bar 4 /} \
-${color7}/home ${fs_bar 4 /home} \
+${offset 55}${color3}cpu ${cpubar 4} \
+${offset 240}${color4}ram ${membar 4} \
+${offset 240}${color5}swap ${swapbar 4} \
+${offset 240}${color6}/ ${fs_bar 4 /} \
+${offset 240}${color7}/home ${fs_bar 4 /home} \
+${offset 240}${color8}wireless ${wireless_link_bar wlan0}
 ]]
