--- a/home/lucas/.config/i3/cores.conf
+++ b/home/lucas/.config/i3/cores.conf
@@ -6,6 +6,13 @@ cormed2='#FFAE00'
 cormax='#FF0000'
 
 # Nord
+branco1='#d8dee9'
+branco2='#e5e9f0'
+branco3='#eceff4'
+cinza1='#2e3440'
+cinza2='#3b4252'
+cinza3='#434c5e'
+cinza4='#4c566a'
 azul='#88c0d0'
 azul2='#81a1c1'
 azul3='#5e81ac'
