--- a/home/lucas/.config/i3/config
+++ b/home/lucas/.config/i3/config
@@ -8,24 +8,28 @@ new_window pixel 3
 font pango:Cantarell 8, Siji 10
 
 #100%: FF - 95%: F2 - 90%: E6 - 85%: D9 - 80%: CC - 75%: BF - 70%: B3 - 65%: A6 - 60%: 99 - 55%: 8C - 50%: 80 - 45%: 73 - 40%: 66 - 35%: 59 - 30%: 4D - 25%: 40 - 20%: 33 - 15%: 26 - 10%: 1A - 5%: 0D - 0%: 00
+
+# Nord
+set $branco1				#d8dee9
+set $branco2				#e5e9f0
+set $branco3				#eceff4
+set $cinza1					#2e3440
+set $cinza2					#3b4252
+set $cinza3					#434c5e
+set $cinza4					#4c566a
+set $verde					#8fbcbb
+set $verde2					#a3be8c
+set $azul					#88c0d0
+set $azul2					#81a1c1
+set $azul3					#5e81ac
+set $vermelho				#bf616a
+set $laranja				#d08770
+set $amarelo				#ebcb8b
+set $roxo					#b48ead
+
 set $branco                 #ffffff
 set $preto					#000000
 set $cinza					#8c8b8b
-
-# Nord
-set $verde #8fbcbb
-set $verde2 #a3be8c
-set $azul #88c0d0
-set $azul2 #81a1c1
-set $azul3 #5e81ac
-set $vermelho #bf616a
-set $laranja #d08770
-set $amarelo #ebcb8b
-set $roxo #b48ead
-
-#set $azul					#3465a4
-#set $verde					#a3be8c
-
 set $fundo                  #1b1b1b
 set $fundo-inativo          #222222
 set $texto                  #ffffff
@@ -55,6 +59,7 @@ bindsym $mod+q kill
 bindsym $mod+d exec --no-startup-id exec rofi -sidebar-mode -lines 0 -theme ~/.local/share/rofi/themes/sistematico.rasi -show drun -bw 4 -eh 1 -opacity "80" -lines 8 -line-margin 4 -width 20 -padding 16
 bindsym $mod+g exec --no-startup-id echo "" | rofi -theme ~/.local/share/rofi/themes/sistematico-dark.rasi -dmenu -p "Google: " -bw 0 -lines 1 -separator-style none -location 0 -width 250 -hide-scrollbar -padding 5 | xargs -I{} xdg-open https://www.google.com.br/search?q={}
 bindsym $mod+Shift+g exec --no-startup-id echo "" | rofi -theme ~/.local/share/rofi/themes/sistematico-dark.rasi -dmenu -p "DuckDuckGo: " -bw 0 -lines 1 -separator-style none -location 0 -width 250 -hide-scrollbar -padding 5 | xargs -I{} xdg-open https://duckduckgo.com/?q={}
+bindsym --release Mod1+g exec --no-startup-id exec ~/.config/rofi/scripts/git
 bindsym $mod+Shift+x exec i3lock-fancy -f "Iosevka-Thin" -t "Arch Linux" -p -g -- scrot -z | amixer -q -D pulse sset Master mute
 
 bindsym XF86AudioRaiseVolume exec amixer -q -D pulse sset Master 5%+ unmute
@@ -254,7 +259,7 @@ bar {
 	tray_output none
 	status_command i3blocks -vvv -c ~/.config/i3blocks/config
 	i3bar_command i3bar -t
-    position top
+	position top
 	font pango:Hack, FontAwesome 10
 	strip_workspace_numbers yes
 	colors {
@@ -268,16 +273,14 @@ bar {
     }
 }
 
-#exec_always --no-startup-id hsetroot -solid "#2d343f"
-exec --no-startup-id /home/lucas/bin/wallpaper.sh -r
+exec --no-startup-id ~/bin/wallpaper.sh -r
 exec --no-startup-id compton -b
 exec --no-startup-id conky
-exec --no-startup-id numlockx
-exec --no-startup-id dunst -config ~/.config/dunst/dunstrc
+#exec --no-startup-id dunst -config ~/.config/dunst/dunstrc
+exec --no-startup-id dunst
 exec --no-startup-id clipit
 exec --no-startup-id sudo headsetcontrol 64
-exec --no-startup-id /usr/local/bin/xautolock.sh
-exec --no-startup-id /usr/lib/vino/vino-server
+exec --no-startup-id xautolock.sh
 exec --no-startup-id xset r rate 300 75
 exec --no-startup-id thunar --daemon
 exec --no-startup-id dropbox
