--- a/home/lucas/.tmux.conf
+++ b/home/lucas/.tmux.conf
@@ -10,6 +10,10 @@ set-window-option -g xterm-keys on
 set-option -g base-index 1
 set -g mouse on
 
+# Screensaver
+#set -g lock-after-time 10
+#set -g lock-command "/usr/bin/cmatrix -s -C blue"
+
 # Statusbar 
 #set -g status-right "#(uptime|awk '{print $11}') #(date)"
 #set -g display-time 3000
