modified:   README.md 	modified:   home/lucas/.bash_aliases 	modified:   home/lucas/.config/dunst/dunstrc 	modified:   home/lucas/.config/i3/config 	typechange: home/lucas/.config/i3blocks/config 	new file:   home/lucas/.config/i3blocks/config.airblader 	copied:     home/lucas/.config/i3blocks/config -> home/lucas/.config/i3blocks/config.default 	renamed:    home/lucas/.config/i3/cores.conf -> home/lucas/.config/i3blocks/cores.conf 	modified:   home/lucas/.config/i3blocks/scripts/blank 	modified:   home/lucas/.config/i3blocks/scripts/cpu 	modified:   home/lucas/.config/i3blocks/scripts/disk 	modified:   home/lucas/.config/i3blocks/scripts/firewall 	modified:   home/lucas/.config/i3blocks/scripts/focus 	modified:   home/lucas/.config/i3blocks/scripts/hora 	modified:   home/lucas/.config/i3blocks/scripts/mem 	modified:   home/lucas/.config/i3blocks/scripts/mpd 	modified:   home/lucas/.config/i3blocks/scripts/packages 	modified:   home/lucas/.config/i3blocks/scripts/temperature 	modified:   home/lucas/.config/i3blocks/scripts/trash 	modified:   home/lucas/.config/i3blocks/scripts/uptime 	modified:   home/lucas/.config/i3blocks/scripts/volume 	modified:   home/lucas/.config/i3blocks/scripts/wallpaper 	modified:   home/lucas/.config/i3blocks/scripts/weather 	modified:   home/lucas/.config/i3blocks/scripts/wifi 	modified:   home/lucas/.config/ncmpcpp/art2.sh 	modified:   home/lucas/.config/ncmpcpp/config 	renamed:    home/lucas/.config/ncmpcpp/config.sistematico -> home/lucas/.config/ncmpcpp/config1 	copied:     home/lucas/.config/ncmpcpp/config -> home/lucas/.config/ncmpcpp/config3 	new file:   home/lucas/bin/clearlogs.sh 	modified:   home/lucas/bin/screenshot.sh 	modified:   home/lucas/bin/wallpaper.sh 	modified:   screenshot.png

--- a/home/lucas/.config/i3/config
+++ b/home/lucas/.config/i3/config
@@ -69,6 +69,7 @@ bindsym Print exec --no-startup-id ~/bin/screenshot.sh
 bindsym Control+Print exec --no-startup-id ~/bin/screenshot.sh -w
 bindsym --release Mod1+Sys_Req exec --no-startup-id ~/bin/screenshot.sh -s
 bindsym $mod+Print exec --no-startup-id ~/bin/screenshot.sh -d
+bindsym $mod+Shift+Print exec --no-startup-id ~/bin/screenshot.sh -g
 
 bindsym $mod+j focus left
 bindsym $mod+k focus down
@@ -256,19 +257,20 @@ mode "resize" {
 bindsym $mod+r mode "resize"
 
 bar {
+	font pango:Hack, FontAwesome 10
 	tray_output none
-	status_command i3blocks -vvv -c ~/.config/i3blocks/config
+	status_command i3blocks
 	i3bar_command i3bar -t
 	position top
-	font pango:Hack, FontAwesome 10
+	separator_symbol "■"
 	strip_workspace_numbers yes
 	colors {
-		statusline		$branco
+		statusline		$cinza
 		background		$transparente
 		separator		$cinza
 
-		focused_workspace	$transparente	$transparente	$verde
-		inactive_workspace	$transparente	$transparente	$branco
+		focused_workspace	$transparente	$transparente	$branco
+		inactive_workspace	$transparente	$transparente	$cinza
 		urgent_workspace	$transparente	$transparente	$texto-urgente		
     }
 }
@@ -276,7 +278,6 @@ bar {
 exec --no-startup-id ~/bin/wallpaper.sh -r
 exec --no-startup-id compton -b
 exec --no-startup-id conky
-#exec --no-startup-id dunst -config ~/.config/dunst/dunstrc
 exec --no-startup-id dunst
 exec --no-startup-id clipit
 exec --no-startup-id sudo headsetcontrol 64
@@ -284,4 +285,4 @@ exec --no-startup-id xautolock.sh
 exec --no-startup-id xset r rate 300 75
 exec --no-startup-id thunar --daemon
 exec --no-startup-id dropbox
-exec --no-startup-id notes
+#exec --no-startup-id notes
