--- a/home/lucas/.config/i3blocks/cores.conf
+++ b/home/lucas/.config/i3blocks/cores.conf
@@ -22,3 +22,13 @@ amarelo='#ebcb8b'
 vermelho='#bf616a'
 laranja='#d08770'
 roxo='#b48ead'
+
+# @da-edra at github
+dverde='#8CE000'
+dverde2='#00FF00'
+drosa='#ef6191'
+dlaranja='#ffb64c'
+dazul='#4ec2f7'
+dvermelho='#FF0000'
+damarelo='#FFFC00'
+dcinza='#222222'
