--- a/home/lucas/.config/i3/config
+++ b/home/lucas/.config/i3/config
@@ -5,9 +5,11 @@ force_display_urgency_hint 0
 workspace_auto_back_and_forth yes
 new_window pixel 3
 #font pango:DejaVu Sans Mono 8
-font pango:Cantarell 8, Siji 10
+#font pango:Cantarell 8, Siji 10
+font pango:Cantarell 8
 
-#100%: FF - 95%: F2 - 90%: E6 - 85%: D9 - 80%: CC - 75%: BF - 70%: B3 - 65%: A6 - 60%: 99 - 55%: 8C - 50%: 80 - 45%: 73 - 40%: 66 - 35%: 59 - 30%: 4D - 25%: 40 - 20%: 33 - 15%: 26 - 10%: 1A - 5%: 0D - 0%: 00
+# 100%: FF - 95%: F2 - 90%: E6 - 85%: D9 - 80%: CC - 75%: BF - 70%: B3 - 65%: A6 - 60%: 99 - 55%: 8C
+# 50%: 80 - 45%: 73 - 40%: 66 - 35%: 59 - 30%: 4D - 25%: 40 - 20%: 33 - 15%: 26 - 10%: 1A - 5%: 0D - 0%: 00
 
 # Nord
 set $branco1				#d8dee9
