--- a/home/lucas/.config/conky/conky.conf
+++ b/home/lucas/.config/conky/conky.conf
@@ -1,36 +1,10 @@
--- vim: ts=4 sw=4 noet ai cindent syntax=lua
---[[
-Conky, a system monitor, based on torsmo
-
-Any original torsmo code is licensed under the BSD license
-
-All code written since the fork of torsmo is licensed under the GPL
-
-Please see COPYING for details
-
-Copyright (c) 2004, Hannu Saransaari and Lauri Hakkarainen
-Copyright (c) 2005-2012 Brenden Matthews, Philip Kovacs, et. al. (see AUTHORS)
-All rights reserved.
-
-This program is free software: you can redistribute it and/or modify
-it under the terms of the GNU General Public License as published by
-the Free Software Foundation, either version 3 of the License, or
-(at your option) any later version.
-
-This program is distributed in the hope that it will be useful,
-but WITHOUT ANY WARRANTY; without even the implied warranty of
-MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-GNU General Public License for more details.
-You should have received a copy of the GNU General Public License
-along with this program.  If not, see <http://www.gnu.org/licenses/>.
-]]
-
 conky.config = {
     alignment = 'bc',
     maximum_width = 1920,
     minimum_width = 1920,
-    minimum_height = 5,
+    minimum_height = 10,
     border_width = 0,
+    border_inner_margin = 0,
     cpu_avg_samples = 2,
 	default_color = 'white',
     default_outline_color = 'white',
@@ -40,7 +14,7 @@ conky.config = {
     draw_outline = false,
     draw_shades = false,
     use_xft = true,
-    font = 'Hack:size=10',
+    font = 'Source Code Pro:size=10',
     gap_x = 0,
     gap_y = 0,
     net_avg_samples = 2,
@@ -63,6 +37,7 @@ conky.config = {
     show_graph_scale = false,
     show_graph_range = false,
 	default_bar_width = 50,
+	default_bar_height = 5,
 	color1 = '8fbcbb',
 	color2 = '88c0d0',
 	color3 = '81a1c1',
@@ -75,10 +50,10 @@ conky.config = {
 }
 
 conky.text = [[
-${offset 55}${color3}cpu ${cpubar 4} \
-${offset 240}${color4}ram ${membar 4} \
-${offset 240}${color5}swap ${swapbar 4} \
-${offset 240}${color6}/ ${fs_bar 4 /} \
-${offset 240}${color7}/home ${fs_bar 4 /home} \
-${offset 240}${color8}wireless ${wireless_link_bar wlan0}
+${alignc}${color3}cpu ${voffset 2}${cpubar} \
+${offset 10}${color4}${voffset -2}ram ${voffset 2}${membar} \
+${offset 10}${color5}${voffset -2}swap ${voffset 2}${swapbar} \
+${offset 10}${color6}${voffset -2}/ ${voffset 2}${fs_bar /} \
+${offset 10}${color7}${voffset -2}home ${voffset 2}${fs_bar /home} \
+${offset 10}${color8}${voffset -2}wlan ${voffset 2}${wireless_link_bar wlan0}
 ]]
