--- a/home/lucas/.config/i3blocks/cores.conf
+++ b/home/lucas/.config/i3blocks/cores.conf
@@ -32,3 +32,14 @@ dazul='#4ec2f7'
 dvermelho='#FF0000'
 damarelo='#FFFC00'
 dcinza='#222222'
+
+# Airblader
+abvermelho='#d54e53'
+ablaranja='#e78c45'
+abamarelo='#e7c547'
+abverde='#b9ca4a'
+abciano='#458588'
+abazul='#7aa6da'
+abrosa='#c397d8'
+abmarrom='#928374'
+
