modified:   home/lucas/.config/i3/config 	modified:   home/lucas/.config/i3blocks/config.airblader 	modified:   home/lucas/bin/screenshot.sh 	modified:   home/lucas/bin/wallpaper.sh 	modified:   screenshot.png

--- a/home/lucas/.config/i3/config
+++ b/home/lucas/.config/i3/config
@@ -215,7 +215,7 @@ assign [class="^Gmpc"] $workspace6
 assign [class="^Deluge"] $workspace7
 assign [class="^Thunderbird"] $workspace8
 assign [class="^Telegram"] $workspace9
-assign [class="^Whatsie"] $workspace9
+assign [class="(Whatsie|Whatsapp)"] $workspace9
 assign [class="^Hexchat"] $workspace9
 assign [class="^Gtkman"] $workspace10
 assign [class="^Mate-disk-usage-analyzer"] $workspace10
