modified:   .gitignore 	modified:   home/lucas/.config/dunst/dunstrc 	modified:   home/lucas/.config/i3/config 	modified:   home/lucas/.config/i3blocks/config 	modified:   home/lucas/.config/i3blocks/config.airblader 	new file:   home/lucas/.config/i3blocks/config.clean 	renamed:    home/lucas/.config/i3blocks/config.default -> home/lucas/.config/i3blocks/old/config.default 	new file:   home/lucas/.config/i3blocks/old/config.sistematico 	modified:   home/lucas/.config/i3blocks/scripts/eth 	modified:   home/lucas/.config/i3blocks/scripts/forecast 	new file:   home/lucas/.config/i3blocks/scripts/i3blockstheme 	modified:   home/lucas/.config/rofi/scripts/apps 	new file:   home/lucas/bin/syswh.sh 	modified:   setup/install.sh

--- a/home/lucas/.config/i3/config
+++ b/home/lucas/.config/i3/config
@@ -254,12 +254,15 @@ bar {
 	font pango:Source Sans Pro 9, FontAwesome 9
 	tray_output none
 	status_command i3blocks
-	i3bar_command i3bar -t
+	# Fundo Transparente
+	#i3bar_command i3bar -t
 	position top
 	strip_workspace_numbers no
 	colors {
 		statusline		$branco1
-		background		$transparente
+		# Fundo Transparente
+		#background		$transparente
+		background		#1A1829
 		separator		$branco1
 		# 					Borda			Fundo			Texto
 		focused_workspace	$transparente	$transparente	$verde2
