modified:   home/lucas/.config/i3/config 	new file:   home/lucas/.local/share/rofi/themes/sistematico-lateral.rasi

--- a/home/lucas/.config/i3/config
+++ b/home/lucas/.config/i3/config
@@ -206,7 +206,7 @@ for_window [title="Lista de amigos"] floating enable, move absolute position 166
 assign [class="^(Chromium|Firefox|firefox-developer)"] $workspace1
 assign [class="(Termite|Tilix)"] $workspace2
 assign [class="(Pluma|Sublime_text|Atom)"] $workspace3
-assign [class="^Thunar"] $workspace4
+assign [class="^(Thunar|Pcmanfm)"] $workspace4
 assign [class="^Gimp"] $workspace5
 assign [class="^Inkscape"] $workspace5
 assign [class="^Lxappearance"] $workspace5
