--- a/home/lucas/.config/ncmpcpp/config
+++ b/home/lucas/.config/ncmpcpp/config
@@ -2,14 +2,12 @@
 ## Needed for tag editor and file operations to work.
 mpd_host = "127.0.0.1"
 mpd_port = "6600"
-mpd_music_dir = ~/Música
-mpd_crossfade_time = 5
+mpd_music_dir = ~/audio
+mpd_crossfade_time = 6
+
+user_interface = alternative
 
 song_status_format = {{$4%a$9 - }{%t}}|{%f}
-##
-## Note: You can specify third character which will
-## be used to build 'empty' part of progressbar.
-##
 progressbar_look = "─╼·"
 playlist_shorten_total_times = "yes"
 follow_now_playing_lyrics = "yes"
@@ -17,4 +15,4 @@ autocenter_mode = "yes"
 centered_cursor = "yes"
 
 # Notificação 
-execute_on_song_change = notify-send "Now Playing ♫" "$(mpc current)"
+execute_on_song_change = notify-send "♫ Tocando Agora" "$(mpc current)"
