modified:   home/lucas/.config/i3/config 	modified:   home/lucas/.config/i3blocks/scripts/btc 	new file:   home/lucas/.config/polybar/anews.py 	new file:   home/lucas/.config/polybar/btc.sh 	modified:   home/lucas/.config/polybar/config 	modified:   home/lucas/.config/polybar/config.dracula 	new file:   home/lucas/.config/polybar/config.dracula2 	new file:   home/lucas/.config/polybar/config.galdino2 	new file:   home/lucas/.config/polybar/config.szorfein 	new file:   home/lucas/.config/polybar/config.szorfein2 	new file:   home/lucas/.config/polybar/crypto.py 	modified:   home/lucas/.config/polybar/launch.sh 	deleted:    home/lucas/.config/polybar/launch2.sh 	modified:   home/lucas/.config/polybar/weather.py 	modified:   home/lucas/.config/rofi/scripts/configs 	modified:   home/lucas/bin/matebg.sh 	modified:   home/lucas/bin/nodisplay.sh

--- a/home/lucas/.config/i3/config
+++ b/home/lucas/.config/i3/config
@@ -285,7 +285,7 @@ bindsym $mod+r mode "resize"
 #    }
 #}
 
-set $polybar ~/.config/polybar/launch2.sh
+set $polybar ~/.config/polybar/launch.sh
 
 exec --no-startup-id ~/bin/wallpaper.sh -r
 exec_always --no-startup-id $polybar
