modified:   home/lucas/.config/i3/config 	modified:   home/lucas/.config/polybar/anews.py 	modified:   home/lucas/.config/polybar/config.dracula 	modified:   home/lucas/.config/polybar/launch.sh 	new file:   home/lucas/.config/polybar/logs.sh 	new file:   home/lucas/.config/polybar/strcut.py 	modified:   home/lucas/.config/termite/config 	new file:   home/lucas/.config/termite/config.orig 	modified:   home/lucas/.zshrc 	modified:   home/lucas/bin/nodisplay.sh 	new file:   home/lucas/bin/polybar_screencast.sh 	modified:   home/lucas/bin/screencast.sh 	renamed:    home/lucas/bin/matebg.sh -> home/lucas/bin/unsplash.old.sh 	new file:   home/lucas/bin/unsplash.sh

--- a/home/lucas/.config/i3/config
+++ b/home/lucas/.config/i3/config
@@ -287,7 +287,8 @@ bindsym $mod+r mode "resize"
 
 set $polybar ~/.config/polybar/launch.sh
 
-exec --no-startup-id ~/bin/wallpaper.sh -r
+#exec --no-startup-id ~/bin/wallpaper.sh -r
+exec --no-startup-id ~/bin/unsplash.sh
 exec_always --no-startup-id $polybar
 exec --no-startup-id compton -b
 #exec --no-startup-id conky
